@@ -1,9 +1,17 @@
-DIST mtd-utils-snapshot-20060606.tar.bz2 103540 RMD160 16ee11616ef07e0c440417f124695a9b74fe98d9 SHA1 721a0b38c02a176052cd4b595e78dd0f71bf9caf SHA256 b745586441bb4733904b94f8e009532a100d2c6c44befbbdaa01dbc3a512f63e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST mtd-utils-snapshot-20060907.tar.bz2 103302 RMD160 0dadf7111b502ca508f81832ae56e8d2ea1b94f0 SHA1 b8f8b2f6db846302852a5d8a5609e7a34a86cca7 SHA256 c2e0978318fc6c7da34f1368c97e06be04abbc40e3d9a893b33b281d8f113a6a
 DIST mtd-utils-snapshot-20080102-9ba41c4dc891e38c92126bfcc4c366d765841da0.tar.gz 300364 RMD160 8b998bd23be16a389ddef7a5562547647d10aff8 SHA1 39c7c7b383ef0a2a514df649238d918ef8e3217f SHA256 01947ddd2acfbb38dc14c1a12a5c4b1727378c1aa80045295fceb51438da793d
-EBUILD mtd-utils-20060606.ebuild 922 RMD160 a8e7ebe85eae574c0aeecbfc1b936984f2eee05d SHA1 8e2d96acceb4d0bc34a956e46c05960b694857ef SHA256 f759e5310891382b7344842f5d1e59b09f18425907c6a6c9be2aa3c0072fb1e6
 EBUILD mtd-utils-20060907.ebuild 1012 RMD160 e787137448d2852486eef6fb36ec65bb4a3a1600 SHA1 cb9db2f60579a6e935cda5ae320961e678f1cec3 SHA256 313b98726b9915e8ed9ab123bf0c040cfb4532fa97d29aae98f41987168f0863
-EBUILD mtd-utils-20080102.ebuild 1306 RMD160 c7dba3e596c90131c94d924da196b2eb909b82f7 SHA1 ae2f49a83cab777567403a7ac5b285f0a7536784 SHA256 11882a83a8fe2b637ed051173437de5b21b677964e0d7c1606fc06a38e7a96e7
-EBUILD mtd-utils-9999.ebuild 1215 RMD160 94de9087ea20b0523c7b78003784642153993779 SHA1 e4538110cce763b11bad499b3acf817dbbcafa09 SHA256 cb4e55e345351cf8a5c1f421f2f7bf367f43c68941d3cc645800ce2d47e25f3e
-MISC ChangeLog 1646 RMD160 2d515e7093ebf761e10825ab12a6043ae87ea54f SHA1 0915f3f9e50a8f09c0ea36d4eb02a522ca9fb715 SHA256 d6601e732d8ce89680a77832adfda82fb8702ffcfd3f3173f09d69189a804d29
+EBUILD mtd-utils-20080102.ebuild 1317 RMD160 35d9ccbd34d3834b77b2a6cd7714763ea7f7adb4 SHA1 3f044038177d740745614527f6d87a511b6ba6d9 SHA256 aa7f31c3fd751707b5a934bca7bd0bf7de24877ba82569015922dd3aced4d825
+EBUILD mtd-utils-9999.ebuild 1226 RMD160 aed66fb3748b7b9674e3e18be57d8f2fc44269f5 SHA1 5bea37c5f186c88edf73b2ed4fa249beda656ea2 SHA256 054c1bd4516b0719a9d3c75b96d30b275c9e919d3882f6a9842b671ebe2cdb3e
+MISC ChangeLog 1834 RMD160 800dd147040c78e17356ff2719f67082e1006852 SHA1 181f96484ae865cfe7088972821670ca3d15c75b SHA256 17c128fe3cc928bbc7fa6c4ed91e9665d9b036a30da09638d6414a87f11ed212
 MISC metadata.xml 295 RMD160 288922d9558f5bd09c555f12c83c8b3790a55a86 SHA1 d23e0a94045623a3e20ef73a7fadad88511b1cba SHA256 4b0f714cce984fde1ef047457820c93edbbad45d3a856fe16984086fda182092
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHoyWNj9hvisErhMIRAiykAJ9xtcuqATcxMBXyKwbdHdl05/sjCACfY2fU
+6Vo7nmIT3NABVuj9o8Ufd6g=
+=5n55
+-----END PGP SIGNATURE-----
