@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtd-utils/mtd-utils-20080102.ebuild,v 1.1 2008/01/02 21:36:51 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtd-utils/mtd-utils-20080102.ebuild,v 1.2 2008/02/01 13:58:30 vapier Exp $
 
 inherit toolchain-funcs flag-o-matic
 
@@ -19,11 +19,12 @@ IUSE="xattr"
 S=${WORKDIR}/${PN}.git
 
 RDEPEND="!sys-fs/mtd
-		sys-libs/zlib"
+	dev-libs/lzo
+	sys-libs/zlib"
 # ACL is only required for the <sys/acl.h> header file to build mkfs.jffs2
 # And ACL brings in Attr as well.
 DEPEND="xattr? ( sys-apps/acl )
-		${DEPEND}"
+	${DEPEND}"
 
 src_unpack() {
 	unpack ${A}
