@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtd-utils/mtd-utils-9999.ebuild,v 1.2 2008/01/02 21:36:51 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtd-utils/mtd-utils-9999.ebuild,v 1.3 2008/02/01 13:58:30 vapier Exp $
 
 ECVS_USER="anoncvs"
 ECVS_PASS="anoncvs"
@@ -17,11 +17,12 @@ KEYWORDS=""
 IUSE="xattr"
 
 RDEPEND="!sys-fs/mtd
-		sys-libs/zlib"
+	dev-libs/lzo
+	sys-libs/zlib"
 # ACL is only required for the <sys/acl.h> header file to build mkfs.jffs2
 # And ACL brings in Attr as well.
 DEPEND="xattr? ( sys-apps/acl )
-		${DEPEND}"
+	${DEPEND}"
 
 src_unpack() {
 	git_src_unpack
